--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <button>Random</button>
                 <button onclick = "reset()">Reset</button>
             </div>
-            <div>
+            <div class="set-size">
                 <input type="text" placeholder="Size of board" value="16" onchange="changeSize(this.value)"/> <!--Makes the default size of the sketch board 16x16, and calls the changeSize function in main.js to allow a custom grid size-->
                 <button>Set Size</button>
             </div>
